--- a/index.html
+++ b/index.html
@@ -368,17 +368,17 @@
           <h2 class="modal-title">Доставка под заказ</h2>
           <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="modal-form-label modal-form-name">
-              <div class="label-text">Ваше имя:</div>
+              <span class="label-text">Ваше имя:</span>
               <input class="modal-form-input modal-form-input-name" type="text" name="name" placeholder="Введите имя">
-              <div class="label-message">Добавьте имя</div>
+              <span class="label-message">Добавьте имя</span>
             </label>
             <label class="modal-form-label modal-form-email modal-form-error">
-              <div class="label-text">Ваш e-mail:</div>
+              <span class="label-text">Ваш e-mail:</span>
               <input class="modal-form-input modal-form-input-email" type="email" name="email">
-              <div class="label-message">Забавный у вас адрес</div>
+              <span class="label-message">Забавный у вас адрес</span>
             </label>
             <label class="modal-form-label modal-form-what">
-              <div class="label-text">Что нужно привезти:</div>
+              <span class="label-text">Что нужно привезти:</span>
               <input class="modal-form-input modal-form-input-what" type="text" name="what" placeholder="В свободной форме">
             </label>
             <div class="modal-form-label modal-form-count">
