--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico">
     <title>Девайс - главная страница</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
